--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,62 @@
 .container{
   background-color: #2d197c;
-  height: 1000px;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 }
 .card{
   background-color: white;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%) ;
+  width: 50%;
+  padding: 30px;
+  border-radius: 20px;
 }
-hi{
-  font-size: 100px;
+h1{
+  font-size: 30px;
+}
+.add{
+  display: flex;
+  justify-content: space-between;
+}
+.add_todo{
+  width: 80%;
+  padding: 5px 0;
+  font-size: 15px;
+  border-radius: 5px;
+  border: solid 1px #100e0e28;
+}
+.add_btn{
+  padding: 5px 10px;
+  font-size: 15px;
+  color: #c6459d;
+  border: solid 2px #c6459d;
+  background-color: white;
+  border-radius: 5px;
+}
+table{
+  margin-top: 30px;
+  width: 100%;
+  font-size: 15px;
+}
+td{
+  text-align: center;
+}
+.button-update{
+  padding: 5px 10px;
+  font-size: 15px;
+  color: #e38532e3;
+  border: solid 2px #e38532e3;
+  background-color: white;
+  border-radius: 5px;
+}
+.button-delete{
+  padding: 5px 10px;
+  font-size: 15px;
+  color: #5be332e3;
+  border: solid 2px #5be332e3;
+  background-color: white;
+  border-radius: 5px;
 }
